# fedora-drivers-manager

./: .gitignore  CMakeLists.txt  README.md  build.sh  install.sh  make.sh  uninstall.sh
scripts/: detect-gpu.sh
src/: drivers-manager.c  drivers-manager.h  main.c
src/private/: assist.c  assist.h
